pkg/lang/testdata/ub/constraints/valid/check-at-least-one-of.ub
constraints: [
  { kind: at-least-one-of, fields: [input.a, input.b] },
]
