pkg/lang/testdata/ub/constraints/invalid/unknown-kind.ub
constraints: [
  { kind: weird-thing, fields: [a] },
]
